Fix overlapping of clover names

--- a/src/components/clover/index.module.css
+++ b/src/components/clover/index.module.css
@@ -18,6 +18,7 @@
             opacity 0.2s,
             top 0.2s;
         font-size: 1.5rem;
+        z-index: 1;
     }
 
     & > .body {
